--- a/h8dsft_P1M1_salman_faishal.ipynb
+++ b/h8dsft_P1M1_salman_faishal.ipynb
@@ -109,7 +109,8 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.metrics import classification_report, confusion_matrix, precision_score, f1_score, roc_curve, roc_auc_score\n",
-    "from feature_engine.outliers import Winsorizer"
+    "from feature_engine.outliers import Winsorizer\n",
+    "import pickle"
    ]
   },
   {
@@ -2273,7 +2274,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x12b21f91150>"
+       "<matplotlib.lines.Line2D at 0x21a58291870>"
       ]
      },
      "execution_count": 27,
@@ -5969,6 +5970,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Model Saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('best_tree.pkl', 'wb') as file_model:\n",
+    "  pickle.dump(best_tree, file_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['limit_balance', 'sex', 'education_level', 'marital_status', 'age',\n",
+       "       'pay_0', 'pay_2', 'pay_3', 'pay_4', 'pay_5', 'pay_6', 'bill_amt_1',\n",
+       "       'bill_amt_2', 'bill_amt_3', 'bill_amt_4', 'bill_amt_5', 'bill_amt_6',\n",
+       "       'pay_amt_1', 'pay_amt_2', 'pay_amt_3', 'pay_amt_4', 'pay_amt_5',\n",
+       "       'pay_amt_6', 'default_payment_next_month'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pengambilan Kesimpulan"
    ]
   },
@@ -6105,7 +6149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
